[package]
name = "winpls"
version = "0.1.0"
edition = "2024"

[dependencies]
pollster = "0.4.0"
wgpu = "29.0.0"
winit = "0.30.13"


[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
missing_panics_doc = "deny"
missing_assert_message = "deny"
as_underscore = "deny"
wildcard_imports = "deny"
too_long_first_doc_paragraph = "deny"
print_stdout = "deny"

little_endian_bytes = "deny"
host_endian_bytes = "deny"

doc_broken_link = "deny" 